[metadata]
name = fana
author = XLAB d.o.o.
author-email = pypi@xlab.si
summary = Farm animal noise assistant
description-file = README.rst
home-page = https://github.com/xlab-si/fana
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    tutorial

[files]
packages =
    fana
